--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "preinstall": "git config core.hooksPath hooks"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
+    "eslint-config-google": "^0.14.0",
     "typescript": "^4.5.2"
   }
 }
