--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,2 +1,2 @@
-# Added this as stopgap becaus rustfmt doesn't pick up edition in Cargo.toml and doesn't like async fn
+# Added this as stopgap because rustfmt doesn't pick up edition in Cargo.toml and doesn't like async fn
 edition = "2021"
