--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ rocket = "0.5.0-rc.1"
 reqwest = { version = "0.11", features = ["json"] }
 regex = "1.5"
 thiserror = "1.0"
+serde_json = "1.0.73"
+serde = { version = "1.0.132", features = ["derive"]}
